# vaayu

./: .gitignore  README.md  pyproject.toml
.github/workflows/: test.yml
tests/: test_cli.py  test_cloud.py  test_retry.py  test_utils.py  test_verify.py
vaayu/: __init__.py  cli.py  cloud.py  compress.py  ssh_client.py  transfer.py  utils.py  watch.py
